2005-02-17  Raja R Harinath  <rharinath@novell.com>

	* acinclude.m4: Don't include distributed libtool.m4.
	
Wed Feb 16 22:30:54 CET 2005 Paolo Molaro <lupus@ximian.com>

	* alloc.c: tune the code to collect instead of expanding
	the heap if there are many finalizers and we reclaimed some
	memory from cleaning the finalization queue (should fix
	bug #71001 and #70701).

2005-02-07  Geoff Norton  <gnorton@customerdna.com>

	* include/private/gc_priv.h: Bump the max root sets to 1024

Mon Jan 24 16:39:42 CET 2005 Paolo Molaro <lupus@ximian.com>

	* alloc.c, include/gc.h: add event notification, mostly from 
	a patch by Ben Maurer.

2005-01-23  Geoff Norton  <gnorton@customerdna.com>
	
	* os_dir.c: Change GC_task_self to be static everywhere on Darwin.
	Allows gcc4.0 to compile.

Tue Jan 18 11:19:47 CET 2005 Paolo Molaro <lupus@ximian.com>

	* pthread_stop_world.c: handle EINTR from sem_wait() call.

2004-08-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* include/private/gc_priv.h: use the test glib does
	for EXPECT.

2004-08-20  Zoltan Varga  <vargaz@freemail.hu>

	* include/private/gc_priv.h (__GNUC_PREREQ): Fix typo spotted by Ben.

	* include/gc_local_alloc.h pthread_support.c: Add 
	GC_local_gcj_fast_malloc.

	* include/private/gc_priv.h (EXPECT): Enable this on modern versions
	of gcc.

2004-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* pthread_support.c: make __thread variable static
	
	* include/gc_local_alloc.c: make the other headers get
	included before we define our own variable. This fixes
	up an ordering problem with GCJ and thread local alloc.
	
	The problem was that gc.h needed to include gc_local_alloc.h
	before gc_gcj.h. However, when gc.h was included after
	GC_LOCAL_ALLOC_H was #defined, it would not include
	gc_local_alloc.h.

2004-08-16  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am: Create a static version of libmonogc for inclusion into
	the mono executable.

2004-07-27  John Merryweather Cooper <john_m_cooper@yahoo.com>