@@ -400,6 +400,17 @@ GC_PTR GC_local_gcj_malloc(size_t bytes,
 
 # endif /* !THREAD_LOCAL_ALLOC */
 
+int GC_thread_is_registered (void)
+{
+	void *ptr;
+
+	LOCK();
+	ptr = (void *)GC_lookup_thread(pthread_self());
+	UNLOCK();
+
+	return ptr ? 1 : 0;
+}
+
 #if 0
 /*
 To make sure that we're using LinuxThreads and not some other thread
